# routes/web.php
@@ -20,3 +20,4 @@ Route::get('/', function () {
 
 Route::apiResource('images', ImageController::class, ['except' => 'update']);
 Route::post('api/v1/imagesBase64', 'App\Http\Controllers\API\V1\ImageController@storeBase64');
+Route::post('api/v1/imagesFromUrl', 'App\Http\Controllers\API\V1\ImageController@imagesFromUrl');
