# storage/api-docs/api-docs.json
@@ -141,6 +141,47 @@
                 }
             }
         },
+        "/imagesFromUrl": {
+            "post": {
+                "tags": [
+                    "Image"
+                ],
+                "summary": "Save images",
+                "description": "Save images",
+                "operationId": "imagesFromUrl",
+                "parameters": [
+                    {
+                        "name": "urls[]",
+                        "in": "query",
+                        "required": true,
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ProjectResource"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/images/{id}": {
             "get": {
                 "tags": [
